; ModuleID = '/home/carl/AnghaBench/git/vcs-svn/extr_line_buffer.c_buffer_tmpfile_init.c'
source_filename = "/home/carl/AnghaBench/git/vcs-svn/extr_line_buffer.c_buffer_tmpfile_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.line_buffer = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @buffer_tmpfile_init(%struct.line_buffer* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.line_buffer*, align 8
  store %struct.line_buffer* %0, %struct.line_buffer** %3, align 8
  %4 = call i32 (...) @tmpfile()
  %5 = load %struct.line_buffer*, %struct.line_buffer** %3, align 8
  %6 = getelementptr inbounds %struct.line_buffer, %struct.line_buffer* %5, i32 0, i32 0
  store i32 %4, i32* %6, align 4
  %7 = load %struct.line_buffer*, %struct.line_buffer** %3, align 8
  %8 = getelementptr inbounds %struct.line_buffer, %struct.line_buffer* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %13

12:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %13

13:                                               ; preds = %12, %11
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @tmpfile(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
